test/fail/par-bad-asyncstar.mo
(with cycles = 1) async* 42;
